--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.3",
+    "echarts": "^5.5.0",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
