--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-dropdown-select": "^4.11.2",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
