--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "echarts": "^5.5.0",
     "history": "^5.3.0",
@@ -23,6 +24,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.11.2",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
